@@ -1,5 +1,6 @@
 DIST gtk-doc-1.10.tar.bz2 404379 RMD160 b7f7563ddec9ff140fc6fc6feea5b7f49cb1ff32 SHA1 861c977b011efd1bf91957d1a02fb792f39e5509 SHA256 5aeefd055c47d4e8b906e7f74b7769ebafbe3873d90cb9987b2ec503a9b558eb
+DIST gtk-doc-1.11.tar.bz2 453459 RMD160 802c61e4e2072f5e91fe65d6f40587313b7bd23b SHA1 685823e269cc08fdef50828b0a68697222877b1c SHA256 92135cdf89c48a52baa8920f69d702b22d1a7556af410709d2172b90ec33ff23
 EBUILD gtk-doc-am-1.10-r1.ebuild 811 RMD160 a61f8e64fec35106a42e75405072d871603eca3e SHA1 d49b4177982a61be9cfe6d4d19b49dc2afa395c8 SHA256 4036214ac1a67fd8ee947d62057515e7d7d7f9de603bce5b21c7c8ce671a59a4
-EBUILD gtk-doc-am-1.10.ebuild 822 RMD160 fef69bb555dce61d243144f2ed077dac1480168e SHA1 886e30892e0320c50f7a7a776d2528a42509fc85 SHA256 9937277cd10fd1fade6931862bed4225df9bcb53ee40b550c8470cb327a7c968
-MISC ChangeLog 2212 RMD160 e667b6a1d58eb7443844f8de432677264c3a206f SHA1 aa8e6962d3518b70a018474f889d0720196fe9aa SHA256 b65cab6961bbdfba25b54316dc4112aef5197fc16238854e31a657b37785e45e
+EBUILD gtk-doc-am-1.11.ebuild 810 RMD160 fd90a9bb82bda387a2a3c0f77f94efa9a1a9611d SHA1 b8bfefb1e323956ea25b6495ac20a385af67ccd8 SHA256 eb797881cc2c66591952100cbc0a7156bdd59348be38ca15851b3108b9e8ec0f
+MISC ChangeLog 2364 RMD160 98edf1434bb26ed081321ac95f3037a55c24c2b8 SHA1 67ba73bb90fe7faaa7bdd90a5a95fef62d806a7c SHA256 8ea9fd0a6e078b41d953d6e79882bb6260f8333c19c30749a25553b78ff08f13
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
