@@ -1,16 +1,16 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc-am/gtk-doc-am-1.10.ebuild,v 1.4 2008/05/26 17:21:50 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc-am/gtk-doc-am-1.11.ebuild,v 1.1 2009/05/03 23:52:52 leio Exp $
 
 MY_PN="gtk-doc"
 MY_P=${MY_PN}-${PV}
 DESCRIPTION="Automake files from gtk-doc"
 HOMEPAGE="http://www.gtk.org/gtk-doc/"
-SRC_URI="mirror://gnome/sources/${MY_PN}/${MY_P}.tar.bz2"
+SRC_URI="mirror://gnome/sources/${MY_PN}/${PV}/${MY_P}.tar.bz2"
 
 LICENSE="GPL-2 FDL-1.1"
 SLOT="0"
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 
 RDEPEND=""
@@ -23,10 +23,10 @@ S=${WORKDIR}/${MY_P}
 DOCS="AUTHORS ChangeLog MAINTAINERS NEWS README TODO"
 
 src_compile() {
-	mv gtk-doc.m4 gtk-doc-${PV}.m4
+	:
 }
 
 src_install() {
 	insinto /usr/share/aclocal
-	doins gtk-doc-${PV}.m4
+	doins gtk-doc.m4
 }
