@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/gtk-doc-am
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc-am/ChangeLog,v 1.16 2009/04/28 18:09:04 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc-am/ChangeLog,v 1.17 2009/05/03 23:52:52 leio Exp $
+
+*gtk-doc-am-1.11 (03 May 2009)
+
+  03 May 2009; Mart Raudsepp <leio@gentoo.org> +gtk-doc-am-1.11.ebuild:
+  New version shipping gtk-doc.m4 of gtk-doc-1.11
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gtk-doc-am-1.10-r1.ebuild:
   m68k stable
